--- a/Public/index.html
+++ b/Public/index.html
@@ -3,47 +3,130 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!-- CSP stricte -->
-  <meta http-equiv="Content‑Security‑Policy"
+
+  <!-- Politique de sécurité stricte -->
+  <meta http-equiv="Content-Security-Policy"
         content="default-src 'self'; font-src 'self' https://fonts.gstatic.com;
                  style-src 'self' https://fonts.googleapis.com; img-src 'self';
                  script-src 'self'; base-uri 'self'; form-action 'self';">
 
   <title>La Surprise du Chef – Capitol Butcher</title>
 
-  <!-- Google Fonts -->
+  <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap"
         rel="stylesheet" crossorigin>
 
   <style>
-    :root{--sky:#87ceeb;--white:#ffffff;--dark:#1e1e1e;--overlay:rgba(0,0,0,.15);--gold:#ffd54f}
-    *{box-sizing:border-box;margin:0;padding:0;font-family:"Poppins",sans-serif}
-    /* ▼ flex‑column pour empiler carte + footer ▼ */
-    body{
-      background:var(--sky);
-      display:flex;
-      flex-direction:column;
-      align-items:center;
-      justify-content:center;
-      min-height:100vh;
-      color:var(--dark)
+    :root {
+      --sky: #87ceeb;
+      --white: #ffffff;
+      --dark: #1e1e1e;
+      --overlay: rgba(0,0,0,.15);
+      --gold: #ffd54f;
     }
-    .card{background:var(--white);border-radius:18px;padding:2rem 2.5rem;max-width:520px;width:100%;box-shadow:0 8px 24px var(--overlay);text-align:center}
-    h1{font-size:1.7rem;margin-bottom:1.2rem}
-    form{display:flex;flex-direction:column;gap:1rem;margin-bottom:1.5rem}
-    input{padding:.75rem 1rem;border:2px solid var(--sky);border-radius:12px;font-size:.96rem}
-    button{padding:.85rem 1rem;background:var(--sky);border:none;border-radius:12px;font-weight:600;font-size:1rem;cursor:pointer;transition:background .25s}
-    button:hover{background:#76bada}
-    button[disabled]{opacity:.55;cursor:not-allowed}
-    pre{white-space:pre-wrap;text-align:left;background:#f7f9fa;padding:1rem;border-radius:12px;font-size:.95rem;line-height:1.45;margin-bottom:1rem}
-    .error{color:crimson;margin-top:.7rem;font-size:.9rem}
-    #reviewBtn{display:inline-block;margin-top:1rem;padding:.8rem 1.2rem;background:var(--gold);color:var(--dark);border:none;border-radius:10px;font-weight:600;font-size:1rem;text-decoration:none}
-    #reviewBtn:hover{filter:brightness(1.1)}
-
-    footer{margin-top:1.5rem;font-size:.85rem;text-align:center;color:#333}
-    footer a{color:#333;text-decoration:none;padding:0 .4rem}
-    footer a:hover{text-decoration:underline}
+    * {
+      box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+      font-family: "Poppins", sans-serif;
+    }
+    body {
+      background: var(--sky);
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      min-height: 100vh;
+      color: var(--dark);
+      padding: 1rem;
+    }
+    .card {
+      background: var(--white);
+      border-radius: 18px;
+      padding: 2rem 2.5rem;
+      max-width: 520px;
+      width: 100%;
+      box-shadow: 0 8px 24px var(--overlay);
+      text-align: center;
+    }
+    h1 {
+      font-size: 1.7rem;
+      margin-bottom: 1.2rem;
+    }
+    form {
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+      margin-bottom: 1.5rem;
+    }
+    input {
+      padding: 0.75rem 1rem;
+      border: 2px solid var(--sky);
+      border-radius: 12px;
+      font-size: 0.96rem;
+    }
+    button {
+      padding: 0.85rem 1rem;
+      background: var(--sky);
+      border: none;
+      border-radius: 12px;
+      font-weight: 600;
+      font-size: 1rem;
+      cursor: pointer;
+      transition: background 0.25s;
+    }
+    button:hover {
+      background: #76bada;
+    }
+    button[disabled] {
+      opacity: 0.55;
+      cursor: not-allowed;
+    }
+    pre {
+      white-space: pre-wrap;
+      text-align: left;
+      background: #f7f9fa;
+      padding: 1rem;
+      border-radius: 12px;
+      font-size: 0.95rem;
+      line-height: 1.45;
+      margin-bottom: 1rem;
+    }
+    .error {
+      color: crimson;
+      margin-top: 0.7rem;
+      font-size: 0.9rem;
+    }
+    #reviewBtn {
+      display: none;
+      margin-top: 1rem;
+      padding: 0.8rem 1.2rem;
+      background: var(--gold);
+      color: var(--dark);
+      border: none;
+      border-radius: 10px;
+      font-weight: 600;
+      font-size: 1rem;
+      text-decoration: none;
+    }
+    #reviewBtn:hover {
+      filter: brightness(1.1);
+    }
+    footer {
+      margin-top: 1.5rem;
+      font-size: 0.85rem;
+      text-align: center;
+      color: #333;
+    }
+    footer a {
+      color: #333;
+      text-decoration: none;
+      padding: 0 0.4rem;
+    }
+    footer a:hover {
+      text-decoration: underline;
+    }
   </style>
 </head>
 <body>
@@ -65,11 +148,12 @@
 
     <div id="status" aria-live="polite"></div>
     <pre id="poemOutput"></pre>
+
     <a id="reviewBtn" href="https://g.page/r/CAPITOL-BUTCHER/review"
-       rel="noopener noreferrer" target="_blank">Laisser un avis ⭐</a>
+       rel="noopener noreferrer" target="_blank"
+       style="display: none;">Laisser un avis ⭐</a>
   </div>
 
-  <!-- Footer désormais centré en dessous de la carte -->
   <footer>
     <a href="/mentions-legales.html">Mentions légales</a> ·
     <a href="/politique-confidentialite.html">Politique de confidentialité</a>
