test : tout fonctionne en local, prêt pour déploiement

--- a/Public/index.html
+++ b/Public/index.html
@@ -3,10 +3,11 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!-- CSP stricte -->
-  <meta http-equiv="Content‑Security‑Policy"
+
+  <!-- Politique de sécurité stricte -->
+  <meta http-equiv="Content-Security-Policy"
         content="default-src 'self'; font-src 'self' https://fonts.gstatic.com;
-                 style-src 'self' https://fonts.googleapis.com; img-src 'self';
+                 style-src 'self' https://fonts.googleapis.com 'unsafe-inline'; img-src 'self';
                  script-src 'self'; base-uri 'self'; form-action 'self';">
 
   <title>La Surprise du Chef – Capitol Butcher</title>
@@ -27,7 +28,7 @@
       align-items:center;
       justify-content:center;
       min-height:100vh;
-      color:var(--dark)
+      color:var(--dark);
     }
     .card{background:var(--white);border-radius:18px;padding:2rem 2.5rem;max-width:520px;width:100%;box-shadow:0 8px 24px var(--overlay);text-align:center}
     h1{font-size:1.7rem;margin-bottom:1.2rem}
@@ -38,7 +39,7 @@
     button[disabled]{opacity:.55;cursor:not-allowed}
     pre{white-space:pre-wrap;text-align:left;background:#f7f9fa;padding:1rem;border-radius:12px;font-size:.95rem;line-height:1.45;margin-bottom:1rem}
     .error{color:crimson;margin-top:.7rem;font-size:.9rem}
-    #reviewBtn{display:inline-block;margin-top:1rem;padding:.8rem 1.2rem;background:var(--gold);color:var(--dark);border:none;border-radius:10px;font-weight:600;font-size:1rem;text-decoration:none}
+    #reviewBtn{display:none;margin-top:1rem;padding:.8rem 1.2rem;background:var(--gold);color:var(--dark);border:none;border-radius:10px;font-weight:600;font-size:1rem;text-decoration:none}
     #reviewBtn:hover{filter:brightness(1.1)}
 
     footer{margin-top:1.5rem;font-size:.85rem;text-align:center;color:#333}
@@ -65,8 +66,10 @@
 
     <div id="status" aria-live="polite"></div>
     <pre id="poemOutput"></pre>
-    <a id="reviewBtn" href="https://g.page/r/CAPITOL-BUTCHER/review"
-       rel="noopener noreferrer" target="_blank">Laisser un avis ⭐</a>
+
+    <a id="reviewBtn" href="https://g.page/r/CAPITOL-BUTCHER/review" rel="noopener noreferrer" target="_blank">
+      Laisser un avis ⭐
+    </a>
   </div>
 
   <!-- Footer désormais centré en dessous de la carte -->
